--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "license": "MIT",
   "dependencies": {
     "bitcore-lib": "^0.14.0",
-    "bitcore-mnemonic": "^1.2.2",
+    "bitcore-mnemonic-en": "^1.2.3",
     "buffer": "^4.9.0",
     "crypto-js": "^3.1.5",
     "elliptic": "^3.1.0",
@@ -70,11 +70,11 @@
   },
   "devDependencies": {
     "async": "^1.4.2",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "bluebird": "^3.3.1",
     "browserify": "^13.1.0",
