--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bitcore-mnemonic-en": "^1.2.3",
     "crypto-js": "^3.1.5",
     "elliptic": "^3.1.0",
+    "scrypt-async": "^1.3.1",
     "tweetnacl": "0.13.2"
   },
   "devDependencies": {
